Added date picker
Added date picker using a calendar and buttons: selected date, today,
tomorrow.
Date information is saved, but doesn't do anything other than showing a
toast.

Basic menu is also implemented, so you can easily go through the two
activities are your convenience.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,12 @@
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
+        <activity android:name=".DateSelectActivity"
+            android:label="Select a date">
+            <intent-filter>
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
