--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,6 +30,14 @@
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".SettingActivity"
+            android:label="settings">
+            <intent-filler>
+                <category android:name="android.intent.category.DEFAULT"/>
+            </intent-filler>
+        </activity>
+
         <activity android:name=".CreateActivity"></activity>
     </application>
 
