Added basic/loading of tasks.
Click "Jason Testing Area" to test my code. Basically saves a test array
of TaskModels, and loads them to my test activity.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,6 +37,13 @@
                 <category android:name="android.intent.category.DEFAULT"/>
             </intent-filler>
         </activity>
+        <activity
+            android:name=".JasonTestBench"
+            android:label="settings">
+            <intent-filler>
+                <category android:name="android.intent.category.DEFAULT"/>
+            </intent-filler>
+        </activity>
 
         <activity android:name=".CreateActivity"></activity>
     </application>
