Added MainFlow Activity
Mimics what the app should do in the final product (function wise).
Sorry Manjot, I had to add an ugly button for a way to start it.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -44,6 +44,12 @@
                 <category android:name="android.intent.category.DEFAULT"/>
             </intent-filler>
         </activity>
+        <activity android:name=".MainFlow"
+            android:label="MainFlow">
+            <intent-filter>
+                <category android:name="android.intent.category.DEFAULT"/>
+            </intent-filter>
+        </activity>
 
         <activity android:name=".CreateActivity"></activity>
     </application>
