--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,8 +18,7 @@
         </activity>
         <activity
             android:name=".TaskViewerActivity"
-            android:label="Tasks"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:label="Tasks">
             <intent-filter>
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
