--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,10 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <receiver android:process=":remote" android:name="NotificationReceiver"></receiver>
+        <receiver
+            android:name=".NotificationReceiver"
+            android:process=":remote" />
+
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -34,24 +37,25 @@
             android:name=".SettingActivity"
             android:label="settings">
             <intent-filler>
-                <category android:name="android.intent.category.DEFAULT"/>
+                <category android:name="android.intent.category.DEFAULT" />
             </intent-filler>
         </activity>
         <activity
             android:name=".JasonTestBench"
             android:label="settings">
             <intent-filler>
-                <category android:name="android.intent.category.DEFAULT"/>
+                <category android:name="android.intent.category.DEFAULT" />
             </intent-filler>
         </activity>
-        <activity android:name=".MainFlow"
+        <activity
+            android:name=".MainFlow"
             android:label="MainFlow">
             <intent-filter>
-                <category android:name="android.intent.category.DEFAULT"/>
+                <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
-
-        <activity android:name=".CreateActivity"></activity>
+        <activity android:name=".CreateActivity" />
+        <activity android:name=".CustomTaskViewer"></activity>
     </application>
 
 </manifest>
